refactor: complete restructure

--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,13 @@
 application:
+    name: Fluoride
     version: 1.0.0
+    author: ayush
 
 logger:
     level: debug
     encoding: console
     color: true
-    dev_mode: false
+    dev_mode: true
     disable_caller: false
     disable_stacktrace: false
 
@@ -16,18 +18,27 @@ profiler:
 
 server:
     network: tcp
-    host: 0.0.0.0
-    port: 3005
+    host: localhost
+    port: 3000
     log_requests: true
     log_requests_body: false
-    log_disabled_http: ["/version"]
+    log_disabled_http:
+        - "/version"
     profiler_enabled: false
     profiler_path: "/debug"
     cors:
-        allowed_origins: ["*"]
+        allowed_origins:
+            - "*"
         allowed_methods:
-            ["HEAD", "OPTIONS", "GET", "POST", "PUT", "DELETE", "PATCH"]
-        allowed_headers: ["*"]
+            - HEAD
+            - OPTIONS
+            - GET
+            - POST
+            - PUT
+            - DELETE
+            - PATCH
+        allowed_headers:
+            - "*"
         allowed_credentials: false
         max_age: 300
 
@@ -35,7 +46,7 @@ database:
     type: postgres
     username: ayush
     password: ayush
-    host: postgres
+    host: localhost
     port: 5432
     database: fluoride_dev
     ssl: disable
