--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,5 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
-            - name: Build using compose
+            - name: Build
               run: docker-compose build
-            - name: Run using compose
-              run: docker-compose up
