--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,67 +1,48 @@
-version: 2 # use CircleCI 2.0
-jobs: # basic units of work in a run
-    build: # runs not using Workflows must have a `build` job as entry point
-        docker: # run the steps with Docker
-            # CircleCI Go images available at: https://hub.docker.com/r/circleci/golang/
-            - image: circleci/golang:latest
-            # CircleCI PostgreSQL images available at: https://hub.docker.com/r/circleci/postgres/
-            - image: circleci/postgres:latest
-              environment: # environment variables for primary container
+# Golang CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-go/ for more details
+version: 2
+jobs:
+    build:
+        docker:
+            - image: circleci/golang:alpine
+            - image: postgres:latest
+              environment:
                   POSTGRES_DB: fluoride_dev
                   POSTGRES_USER: ayush
                   POSTGRES_PASSWORD: ayush
-
-        parallelism: 2
-
-        environment: # environment variables for the build itself
-            TEST_RESULTS: /tmp/test-results # path to where test results will be saved
-
-        steps: # steps that comprise the `build` job
-            - checkout # check out source code to working directory
-            - run: mkdir -p $TEST_RESULTS # create the test results directory
-
-            - restore_cache: # restores saved cache if no changes are detected since last run
-                  keys:
-                      - go-mod-v4-{{ checksum "go.sum" }}
-
-            #  Wait for Postgres to be ready before proceeding
+                  DATABASE_HOST: postgres
+                  DATABASE_DATABASE: fluoride_dev
+                  DATABASE_USERNAME: ayush
+                  DATABASE_PASSWORD: ayush
+                  DATABASE_SSL: disable
+                  PROFILER_HOST: "0.0.0.0"
+                  PROFILER_PORT: "3002"
+                  SERVER_HOST: "0.0.0.0"
+                  SERVER_PORT: "3000"
+        working_directory: /go/src/github.com/PrunedNeuron/Fluoride
+        steps:
+            - checkout
+            - setup_remote_docker: # (2)
+                  docker_layer_caching: true # (3)
+            # This should go into custom primary image, here's only for the sake of explanation
             - run:
-                  name: Waiting for Postgres to be ready
-                  command: dockerize -wait tcp://localhost:5432 -timeout 1m
-
-            - run:
-                  name: Build application
-                  # store the results of our tests in the $TEST_RESULTS directory
+                  name: Install Docker client
                   command: |
-                      PACKAGE_NAMES=$(go list ./... | circleci tests split --split-by=timings --timings-type=classname)
-                      gotestsum --junitfile ${TEST_RESULTS}/gotestsum-report.xml -- $PACKAGE_NAMES
-
-            - run: make # pull and build dependencies for the project
-
-            - save_cache:
-                  key: go-mod-v4-{{ checksum "go.sum" }}
-                  paths:
-                      - "/go/pkg/mod"
-
+                      set -x
+                      VER="17.03.0-ce"
+                      curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+                      tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+                      mv /tmp/docker/* /usr/bin
+            # This should go into custom primary image, here's only for the sake of explanation
             - run:
-                  name: Start service
-                  command: ./workdir/contacts
-                  background: true # keep service running and proceed to next step
-
-            - run:
-                  name: Validate service is working
+                  name: Install Docker Compose
                   command: |
-                      sleep 5
-                      curl --retry 10 --retry-delay 1 -X GET http://localhost:3000
-
-            - store_artifacts: # upload test summary for display in Artifacts
-                  path: /tmp/test-results
-                  destination: raw-test-output
-
-            - store_test_results: # upload test results for display in Test Summary
-                  path: /tmp/test-results
-workflows:
-    version: 2
-    build-workflow:
-        jobs:
-            - build
+                      set -x
+                      curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+                      chmod +x /usr/local/bin/docker-compose
+            - run:
+                  name: Build container and verify it's working
+                  command: |
+                      set -x
+                      docker-compose build && docker-compose up
