--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,24 +10,8 @@ jobs:
             - checkout
             - setup_remote_docker: # (2)
                   docker_layer_caching: true # (3)
-            # This should go into custom primary image, here's only for the sake of explanation
             - run:
-                  name: Install Docker client
+                  name: Build using docker compose
                   command: |
                       set -x
-                      VER="17.03.0-ce"
-                      curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
-                      tar -xz -C /tmp -f /tmp/docker-$VER.tgz
-                      mv /tmp/docker/* /usr/bin
-            # This should go into custom primary image, here's only for the sake of explanation
-            - run:
-                  name: Install Docker Compose
-                  command: |
-                      set -x
-                      curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-                      chmod +x /usr/local/bin/docker-compose
-            - run:
-                  name: Build container and verify it's working
-                  command: |
-                      set -x
-                      docker-compose build && docker-compose up
+                      docker-compose build
