build: remove bash and git from apk add command

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -3,15 +3,21 @@ ARG TARGETARCH=amd64
 
 FROM golang:alpine AS builder
 RUN apk update && apk upgrade && \
-	apk add bash git make coreutils
+	apk add make
 
 WORKDIR /go/src/github.com/PrunedNeuron/Fluoride/
+
+COPY go.mod .
+COPY go.mod .
+
+RUN go mod download
+
 COPY . .
 
 RUN make
 
-# Build minimal image, chose busybox because it has /bin/sh and is way
-# smaller than alpine
+# Build minimal image
+# Busybox has /bin/sh and is smaller than alpine
 FROM busybox
 WORKDIR /go/src/github.com/PrunedNeuron/Fluoride/
 
