ci: add go module caching

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,16 @@ jobs:
             - setup_remote_docker: # (2)
                   version: 19.03.12
                   docker_layer_caching: true # (3)
+
+            - restore_cache:
+                  keys:
+                      - go-mod-v1-{{ checksum "go.sum" }}
             - run:
                   name: Build using docker compose
                   command: |
                       set -x
                       COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose build
+            - save_cache:
+                  key: go-mod-v1-{{ checksum "go.sum" }}
+                  paths:
+                      - "/go/pkg/mod"
