refactor: rename service and volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.6"
 services:
-    db:
+    postgres:
         container_name: postgres
         build:
             context: .
-            dockerfile: docker/db/Dockerfile
+            dockerfile: docker/postgres/Dockerfile
         restart: on-failure
         environment:
             POSTGRES_DB: fluoride_dev
             POSTGRES_USER: ayush
             POSTGRES_PASSWORD: ayush
         volumes:
-            - database-data:/var/lib/postgresql/data/
+            - pgdata:/var/lib/postgresql/data/
         ports:
             - 5432:5432
         networks:
@@ -24,7 +24,7 @@ services:
             dockerfile: docker/server/Dockerfile
         restart: on-failure
         volumes:
-            - go-cache:/go/pkg/mod/cache
+            - gocache:/go/pkg/mod/cache
         environment:
             APPLICATION_ENV: development
 
@@ -42,14 +42,14 @@ services:
         ports:
             - 3000:3000
         depends_on:
-            - db
+            - postgres
         networks:
             - backend
 
 volumes:
-    database-data:
+    pgdata:
         driver: local
-    go-cache:
+    gocache:
         driver: local
 
 networks:
